--- a/front/css/404.css
+++ b/front/css/404.css
@@ -1,6 +1,5 @@
 .confirmation {
     display: flex;
-    justify-content: center;
     height: 500px;
     width: 65%;
     margin-top: 85px;
@@ -8,17 +7,27 @@
 }
 
 .confirmation {
-    background-color: white;
-    background-image: url("../images/Error404.webp");
+    background-image: url("../images/2Error404.webp");
     background-size: cover;
-    color: #3d424f;
-    text-align: center;
     font-weight: 500;
     padding: 30px;
     border-radius: 25px;
+    align-items: flex-end;
 }
 
 .limitedWidthBlock {
     justify-content: center;
     display: flex;
+}
+
+.btn {
+    font-size: 22px;
+    border-radius: 40px;
+    background-color: #2c3e50;
+    color: white;
+    padding: 18px 28px;
+    cursor: pointer;
+    height: 6%;
+    margin-left: 11%;
+    text-decoration: none;
 }
